--- a/lab06/styles.css
+++ b/lab06/styles.css
@@ -1,5 +1,19 @@
-body {font-family: Georgia, serif;}
-h1, h2{color:DarkBlue;}
-tr.evenrow{color:LightSkyBlue;}
-h1{font-size: 2 em;}
-h2{font-size: .5 em;}
+body {
+    font-family: Georgia, serif;
+}
+
+h1, h2 {
+    color: DarkBlue;
+}
+
+tr.evenrow {
+    color: LightSkyBlue;
+}
+
+h1 {
+    font-size: 2em;
+}
+
+h2 {
+    font-size: 0.5em;
+}
