--- a/lab06/styles.css
+++ b/lab06/styles.css
@@ -1,19 +1,9 @@
-body {
-    font-family: Georgia, serif;
-}
+body {font-family: Georgia, serif;}
 
-h1, h2 {
-    color: DarkBlue;
-}
+h1, h2 { color: DarkBlue;}
 
-tr.evenrow {
-    color: LightSkyBlue;
-}
+tr.evenrow {color: LightSkyBlue;}
 
-h1 {
-    font-size: 2em;
-}
+h1 {font-size: 2em;}
 
-h2 {
-    font-size: 0.5em;
-}
+h2 {font-size: 0.5em;}
