--- a/lab07/styles.css
+++ b/lab07/styles.css
@@ -1,6 +1,6 @@
 
 body {
-    background-color: #F5F5F5; 
+    background-color: #6eafd2; 
     color: #333333; 
     font-family: Arial, sans-serif;
     margin: 0;
