--- a/lab07/styles.css
+++ b/lab07/styles.css
@@ -24,7 +24,7 @@ nav a { color: #eeeae7;
 nav a:hover {background-color: #b951a8;}
 
 
-tr.evenrow {background-color: LightSkyBlue;}
+tr.evenrow {background-color: #eeeae7;}
 
 h1 {font-size: 2em;}
 
