--- a/lab07/styles.css
+++ b/lab07/styles.css
@@ -22,7 +22,7 @@ nav a { color: #eeeae7;}
 nav a:hover {background-color: #b951a8;}
 
 
-tr.evenrow {background-color: #eeeae7;}
+tr.evenrow {background-color: #a6cfe3;}
 
 h1 {font-size: 2em;}
 
