--- a/lab07/styles.css
+++ b/lab07/styles.css
@@ -21,7 +21,7 @@ nav a { color: #eeeae7;}
 nav a:hover {background-color: #b951a8;}
 
 
-tr.evenrow {background-color: #a6cfe3;}
+tr.evenrow {background-color: #83c6e8;}
 
 h1 {font-size: 2em;}
 
