--- a/lab08/styles.css
+++ b/lab08/styles.css
@@ -39,4 +39,12 @@ h2 {font-size: 1em;}
 }
 
 
+img {
+    float: right; 
+    margin: 0 0 10px 15px; 
+    max-width: 250px; 
+    height: auto; 
+    border-radius: 8px; 
+}
+
 
