--- a/lab08/styles.css
+++ b/lab08/styles.css
@@ -47,71 +47,16 @@ img {
     border-radius: 8px; 
 }
 
-
-.form-map-container {
-    display: flex;
-    justify-content: space-between; 
-    align-items: center;
-    flex-wrap: wrap; 
-    background-color: #F5F5F5; 
+.flex-container{display: flex;
     padding: 20px;
-    margin: 30px auto; 
-    border-radius: 10px; 
-    max-width: 90%; 
+    margin: 20px;
+    border-radius: 10px;
+    background-color: #F5F5F5;
 }
 
-
-.form-container, .map-container {
-    flex: 1; 
+.form-map-container{display:  flex;
     padding: 20px;
-    background-color: #FFFFFF; 
-    border-radius: 10px; 
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); 
-    margin: 10px; 
-}
+    margin: 20px;
+    border-radius: 10px;
+    background-color: #F5F5F5;}
 
-
-form {
-    display: flex;
-    flex-direction: column;
-}
-
-form input, form textarea, form label {
-    margin-bottom: 10px;
-    padding: 10px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    width: 100%; 
-}
-
-form input[type="submit"] {
-    background-color: #0047AB; 
-    color: white;
-    font-weight: bold;
-    border: none;
-    cursor: pointer;
-    padding: 12px;
-    border-radius: 5px;
-}
-
-form input[type="submit"]:hover {
-    background-color: #003580; 
-}
-
-
-.map-container iframe {
-    width: 100%;
-    height: 350px; 
-    border-radius: 10px; 
-}
-
-
-@media (max-width: 768px) {
-    .form-map-container {
-        flex-direction: column;
-    }
-
-    .form-container, .map-container {
-        width: 100%; 
-    }
-}
