--- a/lab08/styles.css
+++ b/lab08/styles.css
@@ -98,7 +98,7 @@ form {
 
 form label {
     font-weight: bold;
-    margin: 10px 0 5px;
+    margin: 10px;
 }
 
 form input, form textarea {
@@ -140,7 +140,7 @@ form input[type="submit"]:hover {
     }
 
     .flex-container {
-        text-align: center;
+        text-align: left;
     }
 
     .form-container, .map-container {
