--- a/lab08/styles.css
+++ b/lab08/styles.css
@@ -56,7 +56,7 @@ img {
     padding: 20px;
     border-radius: 15px; 
     max-width: 80%;
-    margin: m10px;
+    margin: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
