--- a/lab08/styles.css
+++ b/lab08/styles.css
@@ -82,6 +82,7 @@ img {
     max-width: 80%;
     border-radius: 15px; 
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    align-items: center;
 }
 
 
@@ -119,6 +120,7 @@ form input[type="submit"] {
     border-radius: 5px;
     margin-top: 10px;
     width: auto;
+    align-items: center;
 }
 
 form input[type="submit"]:hover {
