--- a/lab08/styles.css
+++ b/lab08/styles.css
@@ -133,8 +133,8 @@ img {
         width: 20px;  
         height: auto; 
         display: inline-block; 
-        vertical-align: left;  
-        margin-right: 10px;  
+        vertical-align: right;  
+        margin-right: 20px;  
         } 
         
          
