--- a/lab08/styles.css
+++ b/lab08/styles.css
@@ -150,3 +150,20 @@ img {
     
 }
 
+.contact-info {
+    margin-bottom: 5px; /* Reduce space below the address */
+}
+
+.social-links {
+    margin-top: 5px; /* Reduce space above the LinkedIn & email */
+    display: flex;  /* Align email & LinkedIn side by side */
+    gap: 10px; /* Space between them */
+}
+
+
+.food-options label {
+    display: flex;
+    align-items: center; 
+    gap: 5px; /* Reduce space between radio buttons and labels */
+    margin-bottom: 3px; /* Reduce space between options */
+}
