--- a/lab08/styles.css
+++ b/lab08/styles.css
@@ -163,7 +163,7 @@ img {
 
 .food-options label {
     display: flex;
-    align-items: center; 
+    align-items: right; 
     gap: 0px; /* Reduce space between radio buttons and labels */
     margin-bottom: .5px; /* Reduce space between options */
 }
