--- a/lab08/styles.css
+++ b/lab08/styles.css
@@ -157,7 +157,7 @@ img {
 
     .social-links {
         margin-top: 2px; /* Reduce space above the LinkedIn & email */
-        gap: 2px; /* Adjust spacing between the email and LinkedIn link */
+        gap: .2px; /* Adjust spacing between the email and LinkedIn link */
         align-items: center; /* Ensures proper alignment */
 }
 
