--- a/lab08/styles.css
+++ b/lab08/styles.css
@@ -70,7 +70,7 @@ img {
         
         .form-map-container { 
         display: flex; 
-         
+        justify-content: space-between; 
         flex-wrap: wrap; 
         background-color: #FFFFFF;  
         padding: 20px; 
