--- a/lab08/styles.css
+++ b/lab08/styles.css
@@ -94,6 +94,7 @@ img {
         form label { 
         font-weight: bold; 
         align-items: right;
+        line-height: 1;
         } 
     
         form input, form textarea { 
