--- a/lab08/styles.css
+++ b/lab08/styles.css
@@ -88,7 +88,7 @@ img {
         form { 
         display: flex; 
         flex-direction: column; 
-        align-items: center;  /* Align radio button and text */
+        align-items: right;  /* Align radio button and text */
         
     
         } 
