--- a/lab08/styles.css
+++ b/lab08/styles.css
@@ -95,7 +95,7 @@ img {
         } 
         
     
-        form input, form textarea { 
+        .forminput-container, .formtextarea-container { 
         padding: 10px; 
         border: 1px solid #ccc; 
         border-radius: 5px; 
