--- a/lab08/styles.css
+++ b/lab08/styles.css
@@ -89,11 +89,12 @@ img {
         .form-containser { 
         display: flex; 
         flex-direction: column;
-        font-weight: bold;
+        
         gap: 0px;
     
         } 
-        
+        .form-label {
+            font-weight: bold; }
     
         .forminput-container, .formtextarea-container { 
         padding: 10px; 
