--- a/lab08/styles.css
+++ b/lab08/styles.css
@@ -50,6 +50,7 @@ img {
 .flex-container { 
     display: flex;  
     align-items: center;  
+    text-align: center;
     flex-wrap: wrap;  
     background-color: #FFFFFF;  
     padding: 20px; 
