--- a/lab08/styles.css
+++ b/lab08/styles.css
@@ -196,3 +196,8 @@ img {
 
 
 
+.flex-container {
+    display: flex;
+    justify-content: space-between; /* Evenly distribute space */
+    align-items: stretch; /* Ensure all items match height */
+    gap: 10px; /* Adjust space between boxes */
