--- a/lab08/styles.css
+++ b/lab08/styles.css
@@ -190,7 +190,7 @@ img {
 
 
 
-.form-section {
+.food-options {
     margin-top: 5px; /* Move sections closer to the top */
     margin-bottom: 5px; /* Minimize spacing between elements */
 }
