--- a/lab10/styles.css
+++ b/lab10/styles.css
@@ -184,3 +184,15 @@ img {
     
     
 }
+
+
+@media screen and (max-width: 768px) {
+    nav a {
+       
+        width: 100%;
+        display: block;
+    }
+    nav a span {
+        display: none; 
+    }
+}
