--- a/project6/projectstyles.css
+++ b/project6/projectstyles.css
@@ -66,7 +66,7 @@ nav a:hover {background-color: #ffc3ff;}
 
            
 
-            @media screen and (max-width: 700px) {
+            @media screen and (max-width: 768px) {
                 nav a {
                    
                     width: 100%;
@@ -78,3 +78,17 @@ nav a:hover {background-color: #ffc3ff;}
                     display: none; 
                 }
             }
+
+
+             /* Adjust content for mobile screens */
+        
+
+        @media (max-width: 600px) {
+            h1 {
+                font-size: 20px; /* Smaller heading */
+            }
+
+            .jamie p, .nina p, .michelle p {
+                font-size: 14px; /* Adjust font size */
+            }
+        }
